--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,13 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-requests = "^2.31.0"
+aiohttp = "^3.8.6"
 beautifulsoup4 = "^4.12.2"
+lxml = "^4.9.3"
 python-dotenv = "^1.0.0"
 pytelegrambotapi = "^4.14.0"
-
+fake-useragent = "^1.3.0"
+selenium = "^4.14.0"
 
 [build-system]
 requires = ["poetry-core"]
