--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python-dotenv = "^1.0.0"
 pytelegrambotapi = "^4.14.0"
 fake-useragent = "^1.3.0"
 selenium = "^4.14.0"
+icecream = "^2.1.3"
 
 [build-system]
 requires = ["poetry-core"]
